# research-literature-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  停止项目.bat  启动项目.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/: config.py  errors.py  main.py
app/api/: chat.py  documents.py  eval.py  experiments.py  knowledge.py
app/chains/: clients.py  compare_chain.py  general_chain.py  note_chain.py  prompts.py  rag_chain.py
app/graph/: nodes.py  state.py  workflow.py
app/models/: schemas.py
app/retriever/: bm25.py  loaders.py  mineru_client.py  reranker.py  retrieval.py  splitters.py  vector_store.py
app/services/: agent_service.py  document_service.py  eval_service.py  rag_service.py
app/static/: app.js  index.html  styles.css
app/tools/: experiment_tool.py  literature_tool.py  note_tool.py  paper_compare_tool.py
docs/: API接口文档.md  仓库维护说明.md  实现边界说明.md  开源发布检查清单.md  真实论文Demo.md  科研文献智能问答与实验分析助手_开发文档.md  评测报告.md  评测说明.md  面试讲解稿.md  项目介绍.md  项目架构.md
scripts/: build_index.py  check.ps1  demo_queries.py  init_experiments.py  open_source_audit.py  run_eval.py  start_app.ps1  stop_app.ps1
tests/: test_agent.py  test_api.py  test_bm25.py  test_eval_data.py  test_eval_service.py  test_health.py  test_loader.py  test_rag.py  test_removed_sources.py  test_reranker.py  test_retrieval.py
(+7 files in other folders)
