[project]
name = "research-literature-rag"
version = "0.1.0"
description = "科研文献智能问答与实验分析助手 MVP"
requires-python = ">=3.13"
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".venv",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]

[tool.coverage.run]
source = ["app"]
omit = ["app/static/*"]
